Revert "fixed overflow styling"
This reverts commit be4b7f0f5d985c419060f6680328b3501f598ae2.

--- a/frontend/src/components/Reviews/ReviewPage.css
+++ b/frontend/src/components/Reviews/ReviewPage.css
@@ -140,7 +140,6 @@
     margin: 16px 0px;
     padding: 20px;
     height: 200px;
-    overflow: scroll;
 }
 
 .single-review-title {
